...
            <TextView
                android:id="@+id/searchMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/donations"
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:scrollbars="vertical"
                tools:listitem="@layout/donation_item_format" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/location_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                tools:listitem="@layout/location_list_format"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
...
